Remove whitspace between title and edition on search

--- a/assets/templates/partials/data-aggregation-results.tmpl
+++ b/assets/templates/partials/data-aggregation-results.tmpl
@@ -47,7 +47,7 @@
                                 data-gtm-search-result-release-date="{{ dateFormatYYYYMMDDNoSlashes .Description.ReleaseDate }}"
                             >
                                 {{ .Description.Title | safeHTML }}
-                                {{ if .Description.Edition }}:{{ end }}
+                                {{- if .Description.Edition }}:{{ end }}
                                 {{ .Description.Edition | safeHTML }}
                             </a>
                         </span>
@@ -61,7 +61,7 @@
                             data-gtm-search-result-release-date="{{ dateFormatYYYYMMDDNoSlashes .Description.ReleaseDate }}"
                         >
                             {{ .Description.Title | safeHTML }}
-                            {{ if .Description.Edition }}:{{ end }}
+                            {{- if .Description.Edition }}:{{ end }}
                             {{ .Description.Edition | safeHTML }}
                         </a>
                     {{end}}
